@@ -2,6 +2,7 @@
 - Support proc or lambda in label of action links
 - Set successful to false when update_column is not authorized for the column
 - Use action link's label for flash message when custom action is not authorized
+- Fix setting nil to has_one through association
 
 = 3.7.6
 - Respect :label_method set in form_ui_options on list.
